--- a/app/map/interactive-map/src/map/map.css
+++ b/app/map/interactive-map/src/map/map.css
@@ -13,8 +13,8 @@
 }
 
 .info-card {
+  margin: 10px 10px 0 0;
   position: absolute;
-  top: 20px;
   left: 20px;
   width: 300px;
   background: rgba(255, 255, 255, 0.9);
