--- a/app/map/interactive-map/src/index.css
+++ b/app/map/interactive-map/src/index.css
@@ -3,8 +3,11 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 h1 {
-  margin: 0; /* Removes the default spacing around the text */
+  margin: 0;
+  font: 2em sans-serif;
 }
